<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">똑립</string>


    <!-- 마이페이지 strings !-->
    <string name="mypage_title">마이페이지</string>
    <string name="my_level_tv">나의 레벨</string>
    <string name="next_level_tv">다음 레벨까지</string>
    <string name="scrap_btn_text">스크랩</string>
    <string name="my_writing_btn_text">내가 작성한 글</string>
    <string name="transaction_history_btn_text">거래내역</string>
    <string name="manage_account_text">계정 정보</string>
    <string name="announcement_text">공지사항</string>
    <string name="usage_manage_text">이용 관리</string>
    <string name="customer_service_center_text">고객센터</string>
    <string name="notice_setting_text">알림설정</string>
    <string name="terms_polices_text">약관 및 정책</string>
    <string name="logout_text">로그아웃</string>
    <string name="manage_my_info_title">내 프로필 관리</string>
    <string name="nickname_text">닉네임</string>
    <string name="check_duplicate_btn_text">중복확인</string>
    <string name="my_independent_career_text">나의 독립 경력</string>
    <string name="my_independent_career_base_format">"%d년 %d개월"</string>
    <string name="my_independent_career_year_format">"%d년"</string>
    <string name="my_independent_career_month_format">"%d개월"</string>
    <string name="my_address_text">주소</string>
    <string name="set_my_town_range_text">우리동네 범위설정</string>
    <string name="main_interest_text">주요 관심사</string>
    <string name="independent_career_text">독립 경력 기간</string>
    <string name="select_year_text">년</string>
    <string name="select_month_text">월</string>
    <string name="finish_select_text">선택완료</string>
    <string name="main_interest_title">주요 관심사 종류</string>
    <string name="no_interest">없음</string>
    <string name="housework_text">집안일</string>
    <string name="cooking_text">레시피</string>
    <string name="safe_life_text">안전한 생활</string>
    <string name="fraud_text">사기</string>
    <string name="welfare_policy_text">복지 · 정책</string>
    <string name="road_address_fromat">"%s %s"</string>
    <string name="suspension_title_text">이용 제한 내역</string>
    <string name="block_user_management">차단 사용자 관리</string>
    <string name="unblock_user">해제</string>
    <string name="my_hometown_address_title">우리동네 주소</string>
    <string name="current_address_title">현 주소</string>
    <string name="current_location_base_setting">현재 위치 기준 설정</string>
    <string name="direct_input">직접 입력</string>
    <string name="range_setting_title">범위설정</string>
    <string name="range_500m">500m</string>
    <string name="range_1km">1km</string>
    <string name="range_1_5km">1.5km</string>
    <string name="range_setting_format">우리집 %s 주변으로 동네를 설정합니다.</string>
    <string name="finish_setting">설정완료</string>
    <string name="manage_account_info_title">계정 정보 관리</string>
    <string name="update_account_info">수정완료</string>
    <string name="name_title">이름</string>
    <string name="birthdate_title">생년월일</string>
    <string name="check_email_title">이메일</string>
    <string name="send_certification_number">인증번호 발송</string>
    <string name="certification_number_sent">인증번호가 발송되었습니다.</string>
    <string name="input_certification_number_hint">인증번호 입력</string>
    <string name="certification_number_inconsistency">인증번호가 일치하지 않습니다.</string>
    <string name="input_verified">인증되었습니다.</string>
    <string name="input_current_password_title">현재 비밀번호 확인</string>
    <string name="input_current_password_hint">현재 비밀번호를 입력해주세요</string>
    <string name="current_password_inconsistency">인증되었습니다.</string>
    <string name="new_password_title">새 비밀번호</string>
    <string name="input_new_password_hint">새로운 비밀번호를 입력해주세요</string>
    <string name="check_new_password_title">새 비밀번호 확인</string>
    <string name="input_check_new_password_hint">새로운 비밀번호를 한번 더 입력해주세요</string>
    <string name="contain_english">영문</string>
    <string name="contain_number">숫자</string>
    <string name="contain_special_character">특수문자</string>
    <string name="sympathy_notice_title">공감 알림</string>
    <string name="comment_notice_title">댓글 알림</string>
    <string name="scrap_notice_title">스크랩 알림</string>
    <string name="faq_title">자주찾는 질문</string>
    <string name="one_on_one_inquiries">1:1 문의하기</string>
    <string name="one_on_one_inquiries_title">문의하려는 내용을 입력해주세요</string>
    <string name="inquiries_hint">"궁금하거나 문제되는 일에 대해 자세히 알려주세요.\n입력하신 내용은 고객센터에서 직접 처리하여 고객님의 메일로 답변드립니다.(2~3일 소요)"</string>
    <string name="send_inquiries">전송</string>
    <string name="dialog_cancel">취소</string>
    <string name="logout_title">정말 똑립에서 로그아웃하시겠어요?</string>
    <string name="amount_format">"%s/%s"</string>
    <string name="my_transaction_history_title">나의 거래내역</string>
    <string name="comment_format">"0%d"</string>
    <string name="member_format">"%d/%d"</string>
    <string name="saved_honey_tip_title">내가 저장한 꿀팁</string>
    <string name="sort_most_recent">최근 작성순</string>
    <string name="sort_popularity">인기순</string>
    <string name="sort_most_comments">댓글 많은 순</string>
    <string name="sort_most_scrap">스크랩 많은 순</string>
    <string name="my_honey_tip_title">내가 작성한 꿀팁</string>


    <string name="searchDelete"><u>전체삭제</u></string>

    <!--sign up-->
    <string name="service_term">서비스 이용약관</string>
    <string name="service_term_detail">서비스 이용약관 상세 내용</string>
    <string name="privacy_term">개인정보 수집 • 이용 동의</string>
    <string name="privacy_term_detail">개인정보 수집 및 이용 동의 상세 내용</string>
    <string name="location_term">위치서비스 이용약관</string>
    <string name="location_term_detail">위치서비스 이용약관 상세 내용</string>


    <!-- 우리동네 strings !-->
    <string name="my_hometown_tab_title">우리동네</string>
    <string name="together_title">함께해요</string>
    <string name="see_detail">더보기</string>
    <string name="write_together">함께해요 글쓰기</string>
    <string name="communication_title">소통해요</string>
    <string name="write_communication">소통해요 글쓰기</string>
    <string name="sort_filter_title">정렬기준</string>
    <string name="together_duration_title">유효 범위</string>
    <string name="required_amount_title">필수 금액</string>
    <string name="max_member_title">최대 인원 제한</string>
    <string name="trade_location_title">거래희망 장소 </string>
    <string name="set_address">주소설정</string>
    <string name="recently_used_place_title">최근 이용 장소</string>
    <string name="join_together">참여하기</string>
    <string name="cancel_join">참여취소</string>
    <string name="join_stat_format">"%d명/%d명"</string>
    <string name="deadline_end">마감되었습니다.</string>
    <string name="set_deadline">마감</string>
    <string name="check_member">참여자 확인하기</string>
    <string name="select_max_member_text">명</string>
    <string name="max_member_format">"%d명"</string>
    <string name="userTip">%s님을 위한 꿀팁</string>
    <string name="userNews">%s님! 속보에요</string>
    <string name="userTown">%s님! 마감임박</string>

    <string name="contact_email">ttokleap@gmail.com</string>

    <!--토스트 메시지 string-->
    <string name="delete_post">게시물이 삭제되었어요.</string>
    <string name="delete_comment">댓글이 삭제되었어요.</string>
    <string name="like">해당 게시물에 좋아요를 남겼어요.</string>
    <string name="like_comment">해당 댓글에 좋아요를 남겼어요.</string>
    <string name="scrap">해당 게시물을 스크랩 했어요.</string>
    <string name="dislike">좋아요를 취소했어요.</string>
    <string name="disscrap">스크랩을 취소했어요.</string>
    <string name="report_post">해당 글에 대한 신고가 접수되었어요.</string>
    <string name="report_post_fail">게시글 신고 사유를 설정해주세요.</string>
    <string name="report_comment">해당 댓글에 대한 신고가 접수되었어요.</string>
    <string name="report_comment_fail">댓글 신고 사유를 설정해주세요.</string>
    <string name="together_join">해당 게시물에 함께했어요.</string>
    <string name="together_timeout">마감했어요.</string>
    <string name="post_fail">욕설이 포함되어 있거나 통신이 불안정합니다.</string>
    <string name="blank_comment">내용을 입력해주세요.</string>

</resources>