<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/manage_account_info_title"
                android:textAppearance="@style/TextAppearance.App.16sp_600"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/manage_account_info_back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/finish_update_account_info_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/update_account_info"
                android:textAppearance="@style/TextAppearance.App.12sp_400"
                android:textColor="@color/blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="24dp"
            android:fillViewport="true"
            android:orientation="vertical"
            android:scrollbars="none"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/manage_account_info_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/input_name_frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/name_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/name_title"
                            android:textAppearance="@style/TextAppearance.App.14sp_700"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/user_name_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/round_input_background"
                            android:paddingHorizontal="14dp"
                            android:paddingVertical="16dp"
                            android:text="아무나"
                            android:textAppearance="@style/TextAppearance.App.12sp_400"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/name_title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/input_birthdate_frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@id/input_name_frame">

                        <TextView
                            android:id="@+id/birthdate_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/birthdate_title"
                            android:textAppearance="@style/TextAppearance.App.14sp_700"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/user_birthdate_tv"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:background="@drawable/round_input_background"
                            android:paddingHorizontal="14dp"
                            android:paddingVertical="16dp"
                            android:text="1999.09.20"
                            android:textAppearance="@style/TextAppearance.App.12sp_400"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/birthdate_title" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/verify_email_frame"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@id/input_birthdate_frame">

                        <TextView
                            android:id="@+id/verify_email_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:text="@string/check_email_title"
                            android:textAppearance="@style/TextAppearance.App.14sp_700"
                            android:textColor="@color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/send_certification_number_frame"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            app:layout_constraintTop_toBottomOf="@id/verify_email_title">

                            <EditText
                                android:id="@+id/input_email_et"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="12dp"
                                android:background="@drawable/round_input_background"
                                android:paddingHorizontal="14dp"
                                android:paddingVertical="16dp"
                                android:text="아무@거나"
                                android:textAppearance="@style/TextAppearance.App.12sp_400"
                                android:textColor="@color/black"
                                app:layout_constraintEnd_toStartOf="@+id/send_certification_number_btn"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/send_certification_number_btn"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:background="@drawable/yellow_btn_background"
                                android:paddingHorizontal="13dp"
                                android:text="@string/send_certification_number"
                                android:textColor="@color/black"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="@id/input_email_et" />

                            <TextView
                                android:id="@+id/certification_number_sent_tv"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:text="@string/certification_number_sent"
                                android:textAppearance="@style/TextAppearance.App.12sp_400"
                                android:textColor="@color/blue"
                                android:visibility="gone"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/send_certification_number_btn" />

                        </androidx.constraintlayout.widget.ConstraintLayout>


                        <EditText
                            android:id="@+id/input_certification_number_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="24dp"
                            android:background="@drawable/round_input_background"
                            android:hint="@string/input_certification_number_hint"
                            android:paddingHorizontal="14dp"
                            android:paddingVertical="16dp"
                            android:textAppearance="@style/TextAppearance.App.12sp_400"
                            android:textColor="@color/black"
                            android:textColorHint="@color/gray80"
                            app:layout_constraintTop_toBottomOf="@id/send_certification_number_frame" />

                        <TextView
                            android:id="@+id/email_certification_number_verified_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/input_verified"
                            android:textAppearance="@style/TextAppearance.App.12sp_400"
                            android:textColor="@color/blue"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/input_certification_number_et" />

                        <TextView
                            android:id="@+id/email_certification_number_inconsistency_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/certification_number_inconsistency"
                            android:textAppearance="@style/TextAppearance.App.12sp_400"
                            android:textColor="@color/orange"
                            android:visibility="gone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/input_certification_number_et" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>